# CMake-Best-Practices-2nd

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
chapter00/: CMakeLists.txt
chapter00/src/: apple_war.cpp  clock.cpp  clock.h  collision.cpp  collision.h  game.cpp  game.h  game_menu.cpp  game_menu.h  game_over.cpp  game_over.h  game_play.cpp  game_play.h  game_won.cpp  game_won.h  hello_pdcurses.cpp  konami.cpp  konami.h  main.cpp  move.cpp  move.h  object.h  rect.cpp  rect.h
chapter01/: CMakeLists.txt
chapter01/policy_example/: CMakeLists.txt
chapter01/policy_example/src/: main.cpp
chapter01/simple_executable/: CMakeLists.txt
chapter01/simple_executable/src/: main.cpp
chapter02/: CMakeLists.txt
chapter02/component1/: CMakeLists.txt
chapter02/component_interface/: CMakeLists.txt
chapter02/simple_example/: CMakeLists.txt
chapter02/simple_example/src/: main.cpp
game-blackjack/: CMakeLists.txt
game-blackjack/src/: card.cpp  card.h  debug.cpp  debug.h  display.cpp  display.h  game.cpp  game.h  main.cpp
